<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
<PreferenceCategory
   android:name="@string/settings_general" >
   <CheckBoxPreference
     android:key="menuOpenOnStart"
     android:summary="@string/settings_showmenu_summary"
     android:name="@string/settings_showmenu"
     android:defaultValue="false"/>
 </PreferenceCategory>
 
  <PreferenceCategory
     android:summary="@string/settings_other_summary"
     android:name="@string/settings_other" >
      <Preference
      android:key="about"
      android:summary="@string/settings_aboutus_summary"
      android:name="@string/settings_aboutus" />
      <Preference
      android:key="rate"
      android:summary="@string/settings_rate_summary"
      android:name="@string/settings_rate" />
  
 </PreferenceCategory>
     
</PreferenceScreen>
